--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+      <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Putri Rohmatul</h1>
       <p class="lead">Student | XI PPLG 3</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -86,7 +86,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/1.jpg" class="card-img-top" alt="project" />
+              <img src="1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/2.jpg" class="card-img-top" alt="project" />
+              <img src="2.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -102,7 +102,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/3.jpg" class="card-img-top" alt="project" />
+              <img src="3.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
