--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Putri Rohmatul</h1>
-      <p class="lead">Student | XI PPLG 3</p>
+      <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#D1BB9E"
@@ -60,16 +60,30 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ullam natus maiores, temporibus ipsum dolore nisi fugiat eos nesciunt odio nostrum sit dolores iste vero molestiae ratione hic tempora vitae.</p>
+            <p>Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe reiciendis quibusdam distinctio. Molestias cumque accusantium quos perspiciatis ipsa. Quis sapiente, eveniet facere assumenda ipsa nisi!</p>
-          </div>
+          <h4>HARD SKILL</h4>
+          <p>
+            ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+            ~ Web Development: HTML, CSS<br>
+            ~ Bootstrap<br>
+            ~ Database: MySQL
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4>SOFT SKILL</h4>
+          <p>
+            ~ Disiplin dan Bertanggung jawab<br>
+            ~ Mampu bekerja dalam tim maupun individu<br>
+            ~ Mampu manajemen waktu dengan baik<br>
+            ~ Memiliki rasa semangat untuk berkembang
+          </p>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#EAD8C0"
+          fill="#D1BB9E"
           fill-opacity="1"
           d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -86,28 +100,49 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="1.jpg" class="card-img-top" alt="project" />
+              <img src="img/1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
+                <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="2.jpg" class="card-img-top" alt="project" />
+              <img src="img/5.png" class="card-img-top" alt="project" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website Pemesanan Makanan "Feane" Berbasis Web</p>
+                <p class="card-text">Website pemesanan makanan berbasis web yang menampilkan daftar menu seperti pizza, burger, dan kentang goreng. Dibuat dengan HTML, CSS, JavaScript, dan Django, website ini memiliki tampilan responsif dan fitur seperti navigasi menu, pemesanan online, dan keranjang belanja. Aplikasi ini berjalan di localhost dengan URL 127.0.0.1:8000 melalui browser.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="3.jpg" class="card-img-top" alt="project" />
+              <img src="img/3.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Dashboard Data Siswa Berbasis Web dengan Odoo</p>
+                <p class="card-text">Aplikasi ini adalah dashboard siswa berbasis web yang dikembangkan menggunakan platform Odoo. Admin dapat memantau jumlah siswa laki-laki, perempuan, dan total siswa secara visual. Tampilan mencakup grafik distribusi gender, jurusan teratas, dan jumlah siswa per kelas. Sistem ini berjalan di browser secara efisien dan real-time.</p>
               </div>
             </div>
           </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/4.jpg" class="card-img-top" alt="project" />
+              <div class="card-body">
+                <p class="card-text">Aplikasi Akademik Siswa Berbasis Web dan Mobile</p>
+                <p class="card-text">Aplikasi ini adalah sistem akademik siswa berbasis web dan mobile yang dikembangkan dengan Flutter dan terintegrasi dengan Firebase dan Supabase. Fitur login digunakan untuk mengakses data akademik siswa SMKN 5 Malang. Aplikasi ini memungkinkan pengelolaan data siswa secara dinamis melalui antarmuka modern dan responsif, serta mendukung penggunaan di browser maupun perangkat Android.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/2.jpg" class="card-img-top" alt="project" />
+              <div class="card-body">
+                <p class="card-text">Aplikasi Jadwal Kuliah Berbasis Web</p>
+                <p class="card-text">Aplikasi ini adalah sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti menambah, mengedit, menghapus. Halaman utama menampilkan tabel barang lengkap dengan nama, keterangan, kategori, harga, dan stok.Tampilan menggunakan desain responsif dengan sidebar navigasi, tombol aksi (edit & hapus), dan fitur pencarian, sehingga memudahkan pengguna dalam mengelola data secara efisien melalui browser.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
