--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+      <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Putri Rohmatul</h1>
       <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -100,7 +100,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/1.jpg" class="card-img-top" alt="project" />
+              <img src="1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text"> Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
                 <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
@@ -109,7 +109,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/5.png" class="card-img-top" alt="project" />
+              <img src="5.png" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Website Pemesanan Makanan "Feane" Berbasis Web</p>
                 <p class="card-text">Website pemesanan makanan berbasis web yang menampilkan daftar menu seperti pizza, burger, dan kentang goreng. Dibuat dengan HTML, CSS, JavaScript, dan Django, website ini memiliki tampilan responsif dan fitur seperti navigasi menu, pemesanan online, dan keranjang belanja. Aplikasi ini berjalan di localhost dengan URL 127.0.0.1:8000 melalui browser.</p>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/3.jpg" class="card-img-top" alt="project" />
+              <img src="3.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Dashboard Data Siswa Berbasis Web dengan Odoo</p>
                 <p class="card-text">Aplikasi ini adalah dashboard siswa berbasis web yang dikembangkan menggunakan platform Odoo. Admin dapat memantau jumlah siswa laki-laki, perempuan, dan total siswa secara visual. Tampilan mencakup grafik distribusi gender, jurusan teratas, dan jumlah siswa per kelas. Sistem ini berjalan di browser secara efisien dan real-time.</p>
@@ -127,7 +127,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/4.jpg" class="card-img-top" alt="project" />
+              <img src="4.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Aplikasi Akademik Siswa Berbasis Web dan Mobile</p>
                 <p class="card-text">Aplikasi ini adalah sistem akademik siswa berbasis web dan mobile yang dikembangkan dengan Flutter dan terintegrasi dengan Firebase dan Supabase. Fitur login digunakan untuk mengakses data akademik siswa SMKN 5 Malang. Aplikasi ini memungkinkan pengelolaan data siswa secara dinamis melalui antarmuka modern dan responsif, serta mendukung penggunaan di browser maupun perangkat Android.</p>
@@ -136,7 +136,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/2.jpg" class="card-img-top" alt="project" />
+              <img src="2.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Aplikasi Jadwal Kuliah Berbasis Web</p>
                 <p class="card-text">Aplikasi ini adalah sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti menambah, mengedit, menghapus. Halaman utama menampilkan tabel barang lengkap dengan nama, keterangan, kategori, harga, dan stok.Tampilan menggunakan desain responsif dengan sidebar navigasi, tombol aksi (edit & hapus), dan fitur pencarian, sehingga memudahkan pengguna dalam mengelola data secara efisien melalui browser.</p>
