--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <!-- My Css -->
     <link rel="stylesheet" href="style.css" />
+    <style>
+  /* Menghilangkan jarak default antara section */
+  section {
+    padding-top: 0;
+    margin: 0;
+  }
+
+  /* Khusus jumbotron dikasih padding top agar tidak tertutup navbar */
+  .jumbotron {
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+    margin-bottom: -5px;
+  }
+
+  /* SVG pemisah dihapus jaraknya */
+  svg {
+    display: block;
+    margin-bottom: -5px;
+  }
+
+  /* Per section kasih padding minimal (atau 0 kalau mau benar-benar rapat) */
+  #about, #projects, #contact {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+</style>
+
     <title>My Portofolio | Putri Rohmatul</title>
   </head>
   <body id="home">
