--- a/index.html
+++ b/index.html
@@ -79,44 +79,47 @@
     </section>
     <!-- akhir jumbroton -->
     <!-- About -->
-    <section id="about">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>About me</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
-            <p>Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab</p>
-          </div>
-          <div class="col-md-4">
-          <h4>HARD SKILL</h4>
-          <p>
-            ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
-            ~ Web Development: HTML, CSS<br>
-            ~ Bootstrap<br>
-            ~ Database: MySQL
-          </p>
-        </div>
-        <div class="col-md-4">
-          <h4>SOFT SKILL</h4>
-          <p>
-            ~ Disiplin dan Bertanggung jawab<br>
-            ~ Mampu bekerja dalam tim maupun individu<br>
-            ~ Mampu manajemen waktu dengan baik<br>
-            ~ Memiliki rasa semangat untuk berkembang
-          </p>
-        </div>
+   <section id="about">
+  <div class="container">
+    <div class="row text-center mb-3">
+      <div class="col">
+        <h2>About me</h2>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#D1BB9E"
-          fill-opacity="1"
-          d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
+    </div>
+    <div class="row justify-content-center fs-5">
+      <div class="col-md-4 text-justify">
+        <p style="text-align: justify;">
+          Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h4 class="text-center">HARD SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+          ~ Web Development: HTML, CSS<br>
+          ~ Bootstrap<br>
+          ~ Database: MySQL
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h4 class="text-center">SOFT SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Disiplin dan Bertanggung jawab<br>
+          ~ Mampu bekerja dalam tim maupun individu<br>
+          ~ Mampu manajemen waktu dengan baik<br>
+          ~ Memiliki rasa semangat untuk berkembang
+        </p>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#D1BB9E"
+        fill-opacity="1"
+        d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z"
+      ></path>
+    </svg>
+  </div>
+</section>
     <!-- Akhir About -->
     <section id="projects">
       <div class="container">
