--- a/index.html
+++ b/index.html
@@ -229,9 +229,12 @@
     </section>
     <!-- akhir contact -->
     <!-- footer -->
-    <footer class="bg-primary text-white text-center pb-5">
-      <p>Create with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a></p>
-    </footer>
+    <footer class="bg-primary text-white text-center pt-4 pb-5">
+  <p>
+    Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
+    <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
+  </p>
+</footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
