--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
   <div class="container">
     <div class="row text-center mb-3">
       <div class="col">
-        <h2>About me</h2>
+        <h2 class="mb-4">About me</h2> <!-- Tambah jarak bawah -->
       </div>
     </div>
     <div class="row justify-content-center fs-5">
-      <div class="col-md-4 text-justify">
+      <div class="col-md-4">
         <p style="text-align: justify;">
           Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
         </p>
       </div>
       <div class="col-md-4">
-        <h4 class="text-center">HARD SKILL</h4>
+        <h4 class="text-center mb-2">HARD SKILL</h4>
         <p style="text-align: justify;">
           ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
           ~ Web Development: HTML, CSS<br>
@@ -102,7 +102,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <h4 class="text-center">SOFT SKILL</h4>
+        <h4 class="text-center mb-2">SOFT SKILL</h4>
         <p style="text-align: justify;">
           ~ Disiplin dan Bertanggung jawab<br>
           ~ Mampu bekerja dalam tim maupun individu<br>
