--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
     </section>
     <!-- akhir jumbroton -->
     <!-- About -->
-   <section id="about">
+  <section id="about">
   <div class="container">
     <div class="row text-center mb-3">
       <div class="col">
-        <h2 class="mb-4">About me</h2> <!-- Tambah jarak bawah -->
+        <h2 class="mb-4">About me</h2>
       </div>
     </div>
     <div class="row justify-content-center fs-5">
-      <div class="col-md-4">
+      <div class="col-md-4 mt-3">
         <p style="text-align: justify;">
           Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
         </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-3">
         <h4 class="text-center mb-2">HARD SKILL</h4>
         <p style="text-align: justify;">
           ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
@@ -101,7 +101,7 @@
           ~ Database: MySQL
         </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-3">
         <h4 class="text-center mb-2">SOFT SKILL</h4>
         <p style="text-align: justify;">
           ~ Disiplin dan Bertanggung jawab<br>
