--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
     <!-- About -->
   <section id="about">
   <div class="container">
-    <div class="row text-center mb-3">
+    <div class="row text-center mb-4">
       <div class="col">
-        <h2 class="mb-4">About me</h2>
+        <h2>About me</h2>
       </div>
     </div>
     <div class="row justify-content-center fs-5">
-      <div class="col-md-4 mt-3">
+      <!-- Paragraf kiri -->
+      <div class="col-md-4 d-flex align-items-start h-100">
         <p style="text-align: justify;">
           Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
         </p>
       </div>
-      <div class="col-md-4 mt-3">
+
+      <!-- Hard Skill -->
+      <div class="col-md-4">
         <h4 class="text-center mb-2">HARD SKILL</h4>
         <p style="text-align: justify;">
           ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
@@ -101,7 +104,9 @@
           ~ Database: MySQL
         </p>
       </div>
-      <div class="col-md-4 mt-3">
+
+      <!-- Soft Skill -->
+      <div class="col-md-4">
         <h4 class="text-center mb-2">SOFT SKILL</h4>
         <p style="text-align: justify;">
           ~ Disiplin dan Bertanggung jawab<br>
@@ -111,6 +116,8 @@
         </p>
       </div>
     </div>
+
+    <!-- Background SVG -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
         fill="#D1BB9E"
