--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
       </div>
     </div>
     <div class="row justify-content-center fs-5">
-      <!-- Paragraf kiri -->
-      <div class="col-md-4 d-flex align-items-start h-100">
+      <!-- Paragraf kiri, diberi invisible heading agar rata -->
+      <div class="col-md-4">
+        <h4 class="invisible">About</h4>
         <p style="text-align: justify;">
           Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
         </p>
