--- a/index.html
+++ b/index.html
@@ -79,43 +79,44 @@
     </section>
     <!-- akhir jumbroton -->
     <!-- About -->
-  <section id="about">
+ <section id="about">
   <div class="container">
-    <div class="row text-center mb-4">
+    <div class="row text-center mt-5 mb-4">
       <div class="col">
         <h2>About me</h2>
       </div>
     </div>
-    <div class="row justify-content-center fs-5">
-  <!-- Paragraf kiri -->
-  <div class="col-md-4" style="margin-top: 42px;">
-    <p style="text-align: justify;">
-      Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
-    </p>
-  </div>
+    <div class="row justify-content-center fs-5 gap-3">
+      <!-- Paragraf kiri -->
+      <div class="col-md-4" style="margin-top: 60px;">
+        <p style="text-align: justify;">
+          Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
+        </p>
+      </div>
 
-  <!-- Hard Skill -->
-  <div class="col-md-4">
-    <h4 class="text-center">HARD SKILL</h4>
-    <p style="text-align: justify;">
-      ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
-      ~ Web Development: HTML, CSS<br>
-      ~ Bootstrap<br>
-      ~ Database: MySQL
-    </p>
-  </div>
+      <!-- Hard Skill -->
+      <div class="col-md-4">
+        <h4 class="text-center">HARD SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+          ~ Web Development: HTML, CSS<br>
+          ~ Bootstrap<br>
+          ~ Database: MySQL
+        </p>
+      </div>
 
-  <!-- Soft Skill -->
-  <div class="col-md-4">
-    <h4 class="text-center">SOFT SKILL</h4>
-    <p style="text-align: justify;">
-      ~ Disiplin dan Bertanggung jawab<br>
-      ~ Mampu bekerja dalam tim maupun individu<br>
-      ~ Mampu manajemen waktu dengan baik<br>
-      ~ Memiliki rasa semangat untuk berkembang
-    </p>
-  </div>
-</div>
+      <!-- Soft Skill -->
+      <div class="col-md-4">
+        <h4 class="text-center">SOFT SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Disiplin dan Bertanggung jawab<br>
+          ~ Mampu bekerja dalam tim maupun individu<br>
+          ~ Mampu manajemen waktu dengan baik<br>
+          ~ Memiliki rasa semangat untuk berkembang
+        </p>
+      </div>
+    </div>
+
     <!-- Background SVG -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
