--- a/index.html
+++ b/index.html
@@ -69,14 +69,18 @@
     </nav>
     <!-- akhir navbar -->
     <!-- jumbotron -->
-<section class="jumbotron text-center">
-      <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Putri Rohmatul</h1>
-      <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#D1BB9E" fill-opacity="1" d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z"></path>
-      </svg>
-    </section>
+<section class="jumbotron text-center" style="padding-top: 120px; padding-bottom: 100px;">
+  <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+  <h1 class="display-4 mt-3">Putri Rohmatul</h1>
+  <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path
+      fill="#D1BB9E"
+      fill-opacity="1"
+      d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z"
+    ></path>
+  </svg>
+</section>
     <!-- akhir jumbroton -->
     <!-- About -->
  <section id="about">
