--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <h2>About me</h2>
       </div>
     </div>
-    <div class="row justify-content-center fs-5 gap-3">
+    <div class="row justify-content-center fs-5 d-flex align-items-start">
       <!-- Paragraf kiri -->
-      <div class="col-md-4" style="margin-top: 60px;">
+      <div class="col-md-4">
         <p style="text-align: justify;">
           Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
         </p>
