--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- Akhir About -->
     <section id="projects">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mt-5 mb-3">
           <div class="col">
             <h2>My Projects</h2>
           </div>
