--- a/index.html
+++ b/index.html
@@ -83,19 +83,22 @@
     </section>
     <!-- akhir jumbroton -->
     <!-- About -->
- <section id="about">
+<section id="about">
   <div class="container">
     <div class="row text-center mt-5 mb-4">
       <div class="col">
         <h2>About me</h2>
       </div>
     </div>
-    <div class="row justify-content-center fs-5 d-flex align-items-start">
+
+    <div class="row justify-content-center fs-5 align-items-start">
       <!-- Paragraf kiri -->
-      <div class="col-md-4">
-        <p style="text-align: justify;">
-          Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
-        </p>
+      <div class="col-md-4 d-flex flex-column justify-content-start">
+        <div style="margin-top: 32px;">
+          <p style="text-align: justify;">
+            Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
+          </p>
+        </div>
       </div>
 
       <!-- Hard Skill -->
