--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
        <div class="col-md-4 d-flex flex-column justify-content-start">
         <div style="margin-top: 32px;">
-          <p style="text-align: justify;">
+          <p style="text-align: center;">
             Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
           </p>
         </div>
@@ -98,6 +98,9 @@
     </div>
 
     <div class="row justify-content-center fs-5 align-items-start">
+           <div class="col-md-4 d-flex flex-column justify-content-start">
+        <div style="margin-top: 32px;">
+          <p style="text-align: justify;">
       <!-- Paragraf kiri -->
   
       </div>
