--- a/index.html
+++ b/index.html
@@ -1,133 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <!-- My Css -->
-    <link rel="stylesheet" href="style.css" />
-    <style>
-  
-  section {
-    padding-top: 0;
-    margin: 0;
-  }
 
-  
-  .jumbotron {
-    padding-top: 6rem;
-    padding-bottom: 3rem;
-    margin-bottom: -5px;
-  }
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
 
-  
-  svg {
-    display: block;
-    margin-bottom: -5px;
-  }
+    section {
+      padding-top: 0;
+      margin: 0;
+    }
 
-  
-  #about, #projects, #contact {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
+    .jumbotron {
+      padding-top: 6rem;
+      padding-bottom: 3rem;
+      margin-bottom: -5px;
+    }
 
-  body {
-    margin: 0;
-    padding: 0;
-  }
-</style>
+    svg {
+      display: block;
+      margin-bottom: -5px;
+    }
 
-    <title>My Portofolio | Putri Rohmatul</title>
-  </head>
-  <body id="home">
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Putri Rohmatul</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
+    #about,
+    #projects,
+    #contact {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+    }
+  </style>
+  <title>My Portofolio | Putri Rohmatul</title>
+</head>
+
+<body id="home">
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Putri Rohmatul</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- jumbotron -->
+  <section class="jumbotron text-center">
+    <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+    <h1 class="display-4">Putri Rohmatul</h1>
+    <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#D1BB9E" fill-opacity="1"
+        d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z" />
+    </svg>
+  </section>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container">
+      <div class="row text-center mt-5 mb-4">
+        <div class="col">
+          <h2>About me</h2>
         </div>
       </div>
-    </nav>
-    <!-- akhir navbar -->
-    <!-- jumbotron -->
- <section class="jumbotron text-center">
-      <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Putri Rohmatul</h1>
-      <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
-       <div class="col-md-4 d-flex flex-column justify-content-start">
-        <div style="margin-top: 32px;">
-          <p style="text-align: center;">
-            Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat dan tanggung jawab.
+      <div class="row justify-content-center fs-5 align-items-start">
+        <div class="col-md-4">
+          <p style="text-align: justify;">
+            Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan
+            pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru,
+            mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat
+            dan tanggung jawab.
           </p>
         </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#D1BB9E"
-          fill-opacity="1"
-          d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- akhir jumbroton -->
-    <!-- About -->
-<section id="about">
-  <div class="container">
-    <div class="row text-center mt-5 mb-4">
-      <div class="col">
-        <h2>About me</h2>
-      </div>
-    </div>
-
-    <div class="row justify-content-center fs-5 align-items-start">
-           <div class="col-md-4 d-flex flex-column justify-content-start">
-        <div style="margin-top: 32px;">
+        <div class="col-md-4">
+          <h4 class="text-center">HARD SKILL</h4>
           <p style="text-align: justify;">
-      <!-- Paragraf kiri -->
-  
+            ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+            ~ Web Development: HTML, CSS<br>
+            ~ Bootstrap<br>
+            ~ Database: MySQL
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="text-center">SOFT SKILL</h4>
+          <p style="text-align: justify;">
+            ~ Disiplin dan Bertanggung jawab<br>
+            ~ Mampu bekerja dalam tim maupun individu<br>
+            ~ Mampu manajemen waktu dengan baik<br>
+            ~ Memiliki rasa semangat untuk berkembang
+          </p>
+        </div>
       </div>
-
-      <!-- Hard Skill -->
-      <div class="col-md-4">
-        <h4 class="text-center">HARD SKILL</h4>
-        <p style="text-align: justify;">
-          ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
-          ~ Web Development: HTML, CSS<br>
-          ~ Bootstrap<br>
-          ~ Database: MySQL
-        </p>
-      </div>
-
-      <!-- Soft Skill -->
-      <div class="col-md-4">
-        <h4 class="text-center">SOFT SKILL</h4>
-        <p style="text-align: justify;">
-          ~ Disiplin dan Bertanggung jawab<br>
-          ~ Mampu bekerja dalam tim maupun individu<br>
-          ~ Mampu manajemen waktu dengan baik<br>
-          ~ Memiliki rasa semangat untuk berkembang
-        </p>
-      </div>
-    </div>
-
     <!-- Background SVG -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
