--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
     <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
     <h1 class="display-4">Putri Rohmatul</h1>
     <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+    <p>          Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan
+            pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru,
+            mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat
+            dan tanggung jawab.</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#D1BB9E" fill-opacity="1"
         d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z" />
@@ -89,12 +93,6 @@
       </div>
       <div class="row justify-content-center fs-5 align-items-start">
         <div class="col-md-4">
-          <p style="text-align: justify;">
-            Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan
-            pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru,
-            mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat
-            dan tanggung jawab.
-          </p>
         </div>
         <div class="col-md-4">
           <h4 class="text-center">HARD SKILL</h4>
