--- a/index.html
+++ b/index.html
@@ -73,46 +73,47 @@
     <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
     <h1 class="display-4">Putri Rohmatul</h1>
     <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
-    <p>          Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan
-            pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru,
-            mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangat
-            dan tanggung jawab.</p>
+    <p> Saya adalah siswa SMK Negeri 5 Malang jurusan (RPL) yang memiliki minat besar di bidang teknologi dan pemrograman. Terbiasa mengerjakan proyek berbasis web dan aplikasi sederhana. Saya senang belajar hal baru, mampu bekerja secara individu maupun dalam tim, serta siap berkontribusi dalam dunia kerja dengan semangatdan tanggung jawab.</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#D1BB9E" fill-opacity="1"
         d="M0,96L34.3,85.3C68.6,75,137,53,206,80C274.3,107,343,181,411,192C480,203,549,149,617,112C685.7,75,754,53,823,74.7C891.4,96,960,160,1029,160C1097.1,160,1166,96,1234,80C1302.9,64,1371,96,1406,112L1440,128L1440,320H0Z" />
     </svg>
   </section>
-
   <!-- About -->
   <section id="about">
-    <div class="container">
-      <div class="row text-center mt-5 mb-4">
-        <div class="col">
-          <h2>About me</h2>
-        </div>
+  <div class="container">
+    <div class="row text-center mt-5 mb-4">
+      <div class="col">
+        <h2>About me</h2>
       </div>
-      <div class="row justify-content-center fs-5 align-items-start">
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-4">
-          <h4 class="text-center">HARD SKILL</h4>
-          <p style="text-align: justify;">
-            ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
-            ~ Web Development: HTML, CSS<br>
-            ~ Bootstrap<br>
-            ~ Database: MySQL
-          </p>
-        </div>
-        <div class="col-md-4">
-          <h4 class="text-center">SOFT SKILL</h4>
-          <p style="text-align: justify;">
-            ~ Disiplin dan Bertanggung jawab<br>
-            ~ Mampu bekerja dalam tim maupun individu<br>
-            ~ Mampu manajemen waktu dengan baik<br>
-            ~ Memiliki rasa semangat untuk berkembang
-          </p>
-        </div>
+    </div>
+    <div class="row justify-content-center fs-5 align-items-start">
+      <!-- Kosongkan atau isi jika ada deskripsi -->
+      <div class="col-md-4 d-none d-md-block"></div>
+
+      <!-- Hard Skill -->
+      <div class="col-md-3 offset-md-1">
+        <h4 class="text-center">HARD SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+          ~ Web Development: HTML, CSS<br>
+          ~ Bootstrap<br>
+          ~ Database: MySQL
+        </p>
       </div>
+
+      <!-- Soft Skill -->
+      <div class="col-md-3">
+        <h4 class="text-center">SOFT SKILL</h4>
+        <p style="text-align: justify;">
+          ~ Disiplin dan Bertanggung jawab<br>
+          ~ Mampu bekerja dalam tim maupun individu<br>
+          ~ Mampu manajemen waktu dengan baik<br>
+          ~ Memiliki rasa semangat untuk berkembang
+        </p>
+      </div>
+    </div>
+
     <!-- Background SVG -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
