--- a/index.html
+++ b/index.html
@@ -80,19 +80,18 @@
     </svg>
   </section>
   <!-- About -->
-  <section id="about">
+ <section id="about">
   <div class="container">
     <div class="row text-center mt-5 mb-4">
       <div class="col">
         <h2>About me</h2>
       </div>
     </div>
-    <div class="row justify-content-center fs-5 align-items-start">
-      <!-- Kosongkan atau isi jika ada deskripsi -->
-      <div class="col-md-4 d-none d-md-block"></div>
 
-      <!-- Hard Skill -->
-      <div class="col-md-3 offset-md-1">
+    <!-- Baris tengah -->
+    <div class="row justify-content-center fs-5 align-items-start">
+      <!-- Kolom Hard Skill -->
+      <div class="col-md-4">
         <h4 class="text-center">HARD SKILL</h4>
         <p style="text-align: justify;">
           ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
@@ -102,8 +101,8 @@
         </p>
       </div>
 
-      <!-- Soft Skill -->
-      <div class="col-md-3">
+      <!-- Kolom Soft Skill -->
+      <div class="col-md-4">
         <h4 class="text-center">SOFT SKILL</h4>
         <p style="text-align: justify;">
           ~ Disiplin dan Bertanggung jawab<br>
