--- a/index.html
+++ b/index.html
@@ -8,35 +8,62 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    color: #000000;
+  }
 
-    section {
-      padding-top: 0;
-      margin: 0;
-    }
+  .navbar {
+    background-color: #ffffff !important;
+  }
 
-    .jumbotron {
-      padding-top: 6rem;
-      padding-bottom: 3rem;
-      margin-bottom: -5px;
-    }
+  .navbar .navbar-brand,
+  .navbar .nav-link {
+    color: #000000 !important;
+  }
 
-    svg {
-      display: block;
-      margin-bottom: -5px;
-    }
+  .jumbotron {
+    background-color: #ffffff;
+    color: #000000;
+  }
 
-    #about,
-    #projects,
-    #contact {
-      padding-top: 2rem;
-      padding-bottom: 2rem;
-    }
-  </style>
+  section {
+    background-color: #ffffff;
+    color: #000000;
+  }
+
+  .card {
+    background-color: #ffffff;
+    border: none;
+  }
+
+  footer {
+    background-color: #ffffff !important;
+    color: #000000;
+  }
+
+  footer a {
+    color: #000000 !important;
+  }
+
+  svg path {
+    fill: #ffffff !important;
+  }
+
+  .btn-primary {
+    background-color: #000000;
+    border-color: #000000;
+  }
+
+  .btn-primary:hover {
+    background-color: #333333;
+    border-color: #333333;
+  }
+</style>
+
   <title>My Portofolio | Putri Rohmatul</title>
 </head>
 
