--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
   }
 
   .jumbotron {
-    background-color: #ffffff;
+    background-color: #0D5EA6;
     color: #000000;
   }
 
   section {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  .contact
+  {
     background-color: #ffffff;
     color: #000000;
   }
@@ -48,6 +53,7 @@
   footer a {
     color: #000000 !important;
   }
+  
 
   svg path {
     fill: #ffffff !important;
