--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: ##0D5EA6;;
     color: #000000;
   }
 
@@ -26,7 +26,7 @@
   }
 
   .jumbotron {
-    background-color: #0D5EA6;
+    background-color: #ffff;
     color: #000000;
   }
 
