--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-color: ##0D5EA6;;
+    background-color: #ffffff; /* putih bersih */
     color: #000000;
   }
 
@@ -20,22 +20,28 @@
     background-color: #ffffff !important;
   }
 
-  .navbar .navbar-brand,
+  .navbar .navbar-brand {
+    color: #0d6efd !important; /* biru seperti di footer */
+    font-weight: bold;
+  }
+
   .navbar .nav-link {
     color: #000000 !important;
   }
 
   .jumbotron {
-    background-color: #ffff;
+    background-color: #ffffff;
     color: #000000;
   }
 
   section {
     background-color: #ffffff;
     color: #000000;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
-  .contact
-  {
+
+  .contact {
     background-color: #ffffff;
     color: #000000;
   }
@@ -51,9 +57,9 @@
   }
 
   footer a {
-    color: #000000 !important;
+    color: #0d6efd !important; /* biru untuk nama di footer */
+    font-weight: bold;
   }
-  
 
   svg path {
     fill: #ffffff !important;
