--- a/index.html
+++ b/index.html
@@ -12,36 +12,30 @@
   body {
     margin: 0;
     padding: 0;
-    background-color: #ffffff; /* putih bersih */
+    background-color: ##0D5EA6;;
     color: #000000;
   }
 
   .navbar {
-    background-color: #ffffff !important;
+    background-color:  #0d6efd  !important;
   }
 
-  .navbar .navbar-brand {
-    color: #0d6efd !important; /* biru seperti di footer */
-    font-weight: bold;
-  }
-
+  .navbar .navbar-brand,
   .navbar .nav-link {
     color: #000000 !important;
   }
 
   .jumbotron {
-    background-color: #ffffff;
+    background-color: #ffff;
     color: #000000;
   }
 
   section {
     background-color: #ffffff;
     color: #000000;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
   }
-
-  .contact {
+  .contact
+  {
     background-color: #ffffff;
     color: #000000;
   }
@@ -57,9 +51,9 @@
   }
 
   footer a {
-    color: #0d6efd !important; /* biru untuk nama di footer */
-    font-weight: bold;
+    color: #000000 !important;
   }
+  
 
   svg path {
     fill: #ffffff !important;
@@ -74,7 +68,7 @@
     background-color: #333333;
     border-color: #333333;
   }
-</style>
+</style> 
 
   <title>My Portofolio | Putri Rohmatul</title>
 </head>
