--- a/index.html
+++ b/index.html
@@ -247,17 +247,10 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffff"
-          fill-opacity="1"
-          d="M0,96L48,96C96,96,192,96,288,106.7C384,117,480,139,576,154.7C672,171,768,181,864,160C960,139,1056,85,1152,69.3C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- akhir contact -->
     <!-- footer -->
-    <footer class="bg-primary text-white text-center pt-4 pb-5">
+    <footer class="bg-primary text-white text-center w-100 m-0 p-4">
   <p>
     Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
     <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
