--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </section>
 
   <!-- About -->
- <section id="about">
+ <section id="about" style="background-color: #ffffff;">
   <div class="container">
     <div class="row text-center mt-5 mb-4">
       <div class="col">
