--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- akhir contact -->
     <!-- footer -->
     <footer class="bg-primary text-white text-center w-100 m-0 p-4">
-  <p>
+  <p class="m-0">
     Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
     <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
   </p>
