--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
     border: none;
   }
 
-  footer {
-    background-color: #ffffff !important;
-    color: #000000;
-  }
+  .footer {
+  background-color: #0B66FF; /* warna biru */
+  color: white;
+  text-align: center;
+  padding: 30px 0;
+  margin: 0;
+  width: 100%;
+}
 
   footer a {
     color: #000000 !important;
