--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   .navbar .navbar-brand,
   .navbar .nav-link {
-    color: #000000 !important;
+    color: #ffffff !important;
   }
 
   .jumbotron {
@@ -203,57 +203,55 @@
         </div>
       </div>
     <!-- contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col mb-3">
-            <h2>Contact Me!</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <form name="put">
-              <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" />
-              </div>
-              <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
-              <form name="submit-to-google-sheet">
-                <input name="email" type="email" placeholder="Email" required />
-                <button type="submit">Send</button>
-              </form>
-              <script>
-                const scriptURL = 'https://script.google.com/macros/s/AKfycbyBpfKQrYBOOTi-hYRkS0VfH6YfV1-o2uBCb-LxTuVMeJjN1mW80ttTSJNV9xbxEOgp/exec';
-                const form = document.forms["put"];
-
-                form.addEventListener("submit", (e) => {
-                  e.preventDefault();
-                  fetch(scriptURL, { method: "POST", body: new FormData(form) })
-                    .then((response) => console.log("Success!", response))
-                    .catch((error) => console.error("Error!", error.message));
-                });
-              </script>
-            </form>
-            </form>
-          </div>
-        </div>
+    <section id="contact" style="background-color: #ffffff;">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col mb-3">
+        <h2>Contact Me!</h2>
       </div>
-    </section>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form name="put">
+          <div class="mb-3">
+            <label for="name" class="form-label">Nama Lengkap</label>
+            <input type="text" class="form-control" id="name" required />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" required />
+          </div>
+          <div class="mb-3">
+            <label for="pesan" class="form-label">Pesan</label>
+            <textarea class="form-control" id="pesan" rows="3" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Kirim</button>
+        </form>
+
+        <script>
+          const scriptURL = 'https://script.google.com/macros/s/AKfycbyBpfKQrYBOOTi-hYRkS0VfH6YfV1-o2uBCb-LxTuVMeJjN1mW80ttTSJNV9xbxEOgp/exec';
+          const form = document.forms["put"];
+
+          form.addEventListener("submit", (e) => {
+            e.preventDefault();
+            fetch(scriptURL, { method: "POST", body: new FormData(form) })
+              .then((response) => console.log("Success!", response))
+              .catch((error) => console.error("Error!", error.message));
+          });
+        </script>
+      </div>
+    </div>
+  </div>
+</section>
     <!-- akhir contact -->
     <!-- footer -->
-    <footer class="bg-primary text-white text-center w-100 m-0 p-4">
-  <p class="m-0">
-    Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
-    <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
-  </p>
+    <footer class="bg-primary text-white text-center w-100 m-0 p-4" style="margin: 0; padding: 0;">
+  <div class="w-100 p-4 m-0">
+    <p class="m-0">
+      Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
+      <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
+    </p>
+  </div>
 </footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
