--- a/index.html
+++ b/index.html
@@ -245,14 +245,17 @@
 </section>
     <!-- akhir contact -->
     <!-- footer -->
-    <footer class="bg-primary text-white text-center w-100 m-0 p-4" style="margin: 0; padding: 0;">
-  <div class="w-100 p-4 m-0">
-    <p class="m-0">
-      Create with <i class="bi bi-suit-heart-fill text-danger"></i> by
-      <a href="https://www.instagram.com/__Putri.rhmtlzy" class="text-white fw-bold">Putri Rohmatul</a>
-    </p>
-  </div>
-</footer>
+    <!-- Footer -->
+<div class="footer">
+  <p>Create with ❤️ by <strong><u>Putri Rohmatul</u></strong></p>
+</div>
+<div class="wave-footer">
+  <svg viewBox="0 0 1440 320">
+    <path fill="#0B66FF" fill-opacity="1"
+      d="M0,288L60,272C120,256,240,224,360,213.3C480,203,600,213,720,208C840,203,960,181,1080,154.7C1200,128,1320,96,1380,80L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+  </svg>
+</div>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
