--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   }
 
   .footer {
-  background-color: #0B66FF; /* warna biru */
+  background-color: #0B66FF;
   color: white;
   text-align: center;
-  padding: 30px 0;
-  margin: 0;
-  width: 100%;
+  padding: 40px 0;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
 }
 
   footer a {
@@ -245,7 +245,6 @@
 </section>
     <!-- akhir contact -->
     <!-- footer -->
-    <!-- Footer -->
 <div class="footer">
   <p>Create with ❤️ by <strong><u>Putri Rohmatul</u></strong></p>
 </div>
