--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="col-md-4">
         <h4 class="text-center">HARD SKILL</h4>
         <p style="text-align: justify;">
-          ~ Bahasa Pemrograman PHP (Codeigniter), Python (Django dasar)<br>
+          ~ Bahasa Pemrograman PHP, Python (Django dasar)<br>
           ~ Web Development: HTML, CSS<br>
           ~ Bootstrap<br>
           ~ Database: MySQL
@@ -169,7 +169,7 @@
               <img src="1.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text"> Aplikasi Manajemen Toko Berbasis Web (Toko Online)</p>
-                <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
+                <p class="card-text">Sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti tambah, edit, hapus, dan cari. Tabel menampilkan nama, keterangan, kategori, harga, dan stok. Desain responsif dilengkapi sidebar, tombol aksi, dan fitur pencarian untuk memudahkan pengelolaan lewat browser.</p>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
               <img src="2.jpg" class="card-img-top" alt="project" />
               <div class="card-body">
                 <p class="card-text">Aplikasi Jadwal Kuliah Berbasis Web</p>
-                <p class="card-text">Aplikasi ini adalah sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP (CodeIgniter), dan MySQL. Admin dapat mengelola data barang seperti menambah, mengedit, menghapus. Halaman utama menampilkan tabel barang lengkap dengan nama, keterangan, kategori, harga, dan stok.Tampilan menggunakan desain responsif dengan sidebar navigasi, tombol aksi (edit & hapus), dan fitur pencarian, sehingga memudahkan pengguna dalam mengelola data secara efisien melalui browser.</p>
+                <p class="card-text">Aplikasi ini adalah sistem manajemen toko berbasis web yang dibangun menggunakan teknologi HTML, CSS, Bootstrap, PHP, dan MySQL. Admin dapat mengelola data barang seperti menambah, mengedit, menghapus. Halaman utama menampilkan tabel barang lengkap dengan nama, keterangan, kategori, harga, dan stok.Tampilan menggunakan desain responsif dengan sidebar navigasi, tombol aksi (edit & hapus), dan fitur pencarian, sehingga memudahkan pengguna dalam mengelola data secara efisien melalui browser.</p>
               </div>
             </div>
           </div>
