--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- jumbotron -->
 <section class="jumbotron text-center">
-  <img src="putri.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+  <img src="ft.jpeg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
   <h1 class="display-4">Putri Rohmatul</h1>
   <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
   
