--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     background-color: ##0D5EA6;;
     color: #000000;
   }
+   .rounded-circle {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+   }
 
   .navbar {
     background-color:  #0d6efd  !important;
@@ -107,7 +112,7 @@
 
   <!-- jumbotron -->
 <section class="jumbotron text-center">
-  <img src="ft.jpg" alt="Putri Rohmatul" width="200" class="rounded-circle img-thumbnail" />
+  <img src="ft.jpg" alt="Putri Rohmatul" width="200" height="200" class="rounded-circle img-thumbnail object-fit-cover" style="object-fit: cover;" />
   <h1 class="display-4">Putri Rohmatul</h1>
   <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
   
