--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-color: ##0D5EA6;;
+    background-color: #0D5EA6;;
     color: #000000;
   }
    .rounded-circle {
