--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">Biodata</a>
+            <a class="nav-link" href="#bio">Biodata</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -131,7 +131,7 @@
 </section>
 
    <!-- Biodata -->
-  <section id="biodata" class="py-5" style="background-color: #ffffff;">
+  <section id="bio" class="py-5" style="background-color: #ffffff;">
     <div class="container">
       <div class="row text-center mb-4">
         <div class="col">
