--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    }
 
   .navbar {
-    background-color:  #0d6efd  !important;
+    background-color:  #8A2D3B  !important;
   }
 
   .navbar .navbar-brand,
@@ -51,7 +51,7 @@
   }
 
   .footer {
-  background-color: #0B66FF;
+  background-color: #8A2D3B;
   color: white;
   text-align: center;
   padding: 40px 0;
@@ -266,7 +266,7 @@
     <div class="container">
       <h2>Kontak</h2>
       <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
-      <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-9108</p>
+      <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
     </div>
   </section>
     <!-- akhir contact -->
