--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    }
 
   .navbar {
-    background-color:  #8A2D3B  !important;
+    background-color:  #725CAD  !important;
   }
 
   .navbar .navbar-brand,
@@ -51,7 +51,7 @@
   }
 
   .footer {
-  background-color: #8A2D3B;
+  background-color: #725CAD;
   color: white;
   text-align: center;
   padding: 40px 0;
