--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
   width: 100vw;
   margin-left: calc(-50vw + 50%);
 }
-
-  footer a {
-    color: #000000 !important;
-  }
   
 
   svg path {
@@ -274,7 +270,7 @@
 <div class="footer">
   <p>Create with ❤️ by <strong><u>Putri Rohmatul</u></strong></p>
 </div>
-akhir footer -->
+<akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
