--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <section class="jumbotron text-center">
   <img src="ft.jpg" alt="Putri Rohmatul" width="200" height="200" class="rounded-circle img-thumbnail object-fit-cover" style="object-fit: cover;" />
   <h1 class="display-4">Putri Rohmatul</h1>
-  <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+  <p class="lead"  style="color: #0D5EA6;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
   
   <div class="container">
     <div class="row justify-content-center">
